Revert(this is not the problem) "Fixed IE8 Bug - z-index for divs in ContainerFieldset"
This reverts commit 3f32e571f61e9fcaecc845f682fbb9d9fa63664f.

--- a/Kwf_js/FrontendForm/FieldSet.css
+++ b/Kwf_js/FrontendForm/FieldSet.css
@@ -11,10 +11,6 @@
 
 .kwfFormContainerFieldSet fieldset {
     border: 2px groove #EEE;
-
-}
-.kwfFormContainerFieldSet fieldset .kwfField {
-    z-index: 1;
 }
 
 .kwfFormContainerFieldSet .kwfFormContainerFieldSetCollapsed div {
